--- a/war/circuitjs.html
+++ b/war/circuitjs.html
@@ -161,6 +161,7 @@
     <!-- produced by the GWT compiler in the module output directory -->
     <!-- or generated automatically in development mode.             -->
     <script language="javascript" src="circuitjs1/circuitjs1.nocache.js"></script>
+    <script language="javascript" src="/electronics/js/iframe_comunication.js"></script>
     
     <!-- Include a history iframe to enable full GWT history support -->
     <!-- (the id must be exactly as shown)                           -->
