--- a/war/circuitjs.html
+++ b/war/circuitjs.html
@@ -249,7 +249,7 @@
 	<!-- produced by the GWT compiler in the module output directory -->
 	<!-- or generated automatically in development mode.             -->
 	<script language="javascript" src="circuitjs1/circuitjs1.nocache.js"></script>
-	<script language="javascript" src="https://0.0.0.0:3000/electronics/js/iframe_comunication.js"></script>
+	<script language="javascript" src="http://0.0.0.0:3000/electronics/js/iframe_comunication.js"></script>
 	
 	<!-- Include a history iframe to enable full GWT history support -->
 	<!-- (the id must be exactly as shown)                           -->
